yiltc-v0.2-backup/testsuite/negative/assert_non_bool.yilt
// assert with a non-bool condition should fail
fn main()
    assert 42
